# inf367a_image2biomass

./: .gitignore  CcGAN_hard_fid_ls_entropy_over_centers.npz  CcGAN_soft_fid_ls_entropy_over_centers.npz  README.md  READMEmd  cGAN_nclass_50_fid_ls_entropy_over_centers.npz  ccgan_README.md  model_scores.json  pyproject.toml  structure.md
docs/: CcGAN.md  ConvNeXt.md  DINO.md  TabPFN.md
src/exploration/: explore.ipynb  main.py
src/main/: augmenting_data.py  main.py  pca.py  predict.py  preproccesing.py  resnet.py  rf_regressor.py  run.py  run_only_train.py  test.py  utils.py
src/main/ccgan_improved/: fid_outputs.txt  full_run_outputs.txt  main.py  run.py  run_train.sh
src/main/ccgan_improved/eval/: eval_metrics.py
src/main/ccgan_improved/generation/: generate.py
src/main/ccgan_improved/models/: ResNet_class.py  ResNet_embed.py  ResNet_regre.py  autoencoder.py  cond_cnn_generator_discriminator.py  cont_cond_cnn_generator_discriminator.py
src/main/ccgan_improved/preprocess/: compress_one.py  preprocess.py
src/main/ccgan_improved/pretrain/: pretrain_AE.py  pretrain_CNN_regre.py
src/main/ccgan_improved/scripts/: run_train.sh
src/main/ccgan_improved/training/: Train_CcGAN.py  Train_cGAN.py  (+1 more)
src/main/model_data/: feature_test_convnext_s350.npy  feature_test_dino.npy  feature_test_dino.paths.txt  feature_test_dino_s350.npy  feature_test_resnet_s350.npy  feature_train_convnext_s350.npy  feature_train_convnext_s350.paths.txt  feature_train_dino.npy  feature_train_dino_s350.npy  feature_train_resnet_s350.npy  features_test.npy  features_train.npy  features_train.paths.txt  inspect_features.py
src/main/models/: cnn_model.py
src/main/preprocessing/: pca.py  preproccesing.py  scaling.py
src/main/regression/: baseline_training.py  baselines.py  rf_regressor.py
src/main/training/: training_cnn.py  training_rf.py
src/main/utils/: save_file.py  utils.py
src/main/vision/: dino.py  resnet.py
src/main/wrangling/: combined_data.py  img_data.py  tabular_data.py
src/models/: main.py
src/preprocessing/: main.py
src/utils/: utils.py
(+4 files in other folders)
