[project]
name = "inf367a-image2biomass"
version = "0.1.0"
description = "Project for V2026"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "loguru>=0.7.3",
    "opencv-python>=4.13.0.90",
    "scikit-learn>=1.8.0",
    "torchvision>=0.25.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
