[project]
name = "inf367a-image2biomass"
version = "0.1.0"
description = "Project for V2026"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "attrs>=25.4.0",
    "h5py>=3.16.0",
    "loguru>=0.7.3",
    "opencv-python>=4.13.0.90",
    "pandas>=3.0.0",
    "scikit-learn>=1.8.0",
    "tabpfn>=2.0.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
